--- a/Converter/Converter.csproj
+++ b/Converter/Converter.csproj
@@ -80,6 +80,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MawaCustom\ConvertorByConnectionStringForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MawaCustom\ConvertorByConnectionStringForm.Designer.cs">
+      <DependentUpon>ConvertorByConnectionStringForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="TableSelectionDialog.cs">
       <SubType>Form</SubType>
@@ -100,6 +106,10 @@
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MawaCustom\ConvertorByConnectionStringForm.resx">
+      <DependentUpon>ConvertorByConnectionStringForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="TableSelectionDialog.resx">
       <DependentUpon>TableSelectionDialog.cs</DependentUpon>
@@ -144,7 +154,7 @@
   -->
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties Reset="1" AssemblyVersion="1" AssemblyFileVersion="1" StartDate="20080613" />
+      <UserProperties StartDate="20080613" AssemblyFileVersion="1" AssemblyVersion="1" Reset="1" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
